fixed jumping of page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,7 +106,7 @@ header {
   border: 0;
   font-size: var(--font-base);
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 button {
